# dotfiles

./: .gitmodules  Xresources
templates/: class.cpp  class.hpp  main.cpp
templates/cmake_cpp_project/: .gitignore  CMakeLists.txt  INSTALL  LICENSE  project.pc.in
templates/cmake_cpp_project/cmake/: ProjectUninstall.cmake
templates/cmake_cpp_project/src/: CMakeLists.txt  main.cpp
